[MCH] introduce the ROF time clustering

--- a/Detectors/MUON/MCH/Workflow/CMakeLists.txt
+++ b/Detectors/MUON/MCH/Workflow/CMakeLists.txt
@@ -9,11 +9,12 @@
 # submit itself to any jurisdiction.
 
 o2_add_library(MCHWorkflow
-               SOURCES src/DataDecoderSpec.cxx src/PreClusterFinderSpec.cxx src/ClusterFinderOriginalSpec.cxx
+               SOURCES src/DataDecoderSpec.cxx src/TimeClusterFinderSpec.cxx 
+               src/PreClusterFinderSpec.cxx src/ClusterFinderOriginalSpec.cxx
                src/EntropyDecoderSpec.cxx
                TARGETVARNAME targetName
                PUBLIC_LINK_LIBRARIES O2::Framework O2::DPLUtils O2::MCHRawDecoder Boost::program_options
-                                     O2::MCHRawImplHelpers RapidJSON::RapidJSON O2::MCHMappingInterface
+                                     O2::MCHRawImplHelpers RapidJSON::RapidJSON O2::MCHMappingInterface O2::MCHTimeClustering
                                      O2::MCHPreClustering O2::MCHMappingImpl4 O2::MCHRawElecMap O2::MCHBase
                                      O2::DataFormatsMCH O2::MCHClustering O2::MCHCTF O2::SimulationDataFormat)
 
@@ -44,6 +45,12 @@ o2_add_executable(
 o2_add_executable(
         cru-page-to-digits-workflow
         SOURCES src/cru-page-to-digits-workflow.cxx
+        COMPONENT_NAME mch
+        PUBLIC_LINK_LIBRARIES O2::MCHWorkflow)
+
+o2_add_executable(
+        digits-to-timeclusters-workflow
+        SOURCES src/digits-to-timeclusters-workflow.cxx
         COMPONENT_NAME mch
         PUBLIC_LINK_LIBRARIES O2::MCHWorkflow)
 
